# style

./: .gitignore  .prettierignore  AGENT.md  Cargo.toml  README.md  cliff.toml  package-lock.json  package.json  palette.json  release-plz.toml  tsconfig.json
.github/workflows/: ci.yml  release-go.yml  release-plz.yml  release-pr.yml
crates/rara-style/: CHANGELOG.md  Cargo.toml  README.md
crates/rara-style/src/: lib.rs
docs/: icon-spec.md  index.html
scripts/: build.js  build.ts
