[package]
name = "rara-style"
version = "0.1.0"
edition = "2024"
description = "rararulab unified CLI/TUI style — soft pink, cute, feminine palette with NO_COLOR support"
license = "MIT"
repository = "https://github.com/rararulab/style"
keywords = ["color", "terminal", "ansi", "style", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

[features]
ratatui = ["dep:ratatui"]

[dependencies]
ratatui = { version = "0.29", optional = true, default-features = false }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
